fix(whatcido): fix layout clipping with overflow-y auto and increased bounds

--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -185,7 +185,15 @@
 }
 .what-content-in {
   height: 100%;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.what-content-in::-webkit-scrollbar {
+  width: 4px;
+}
+.what-content-in::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 4px;
 }
 .what-content-in h5 {
   font-weight: 300;
@@ -228,7 +236,7 @@
     margin-right: 20%;
   }
   .what-box-in {
-    height: 400px;
+    height: 600px;
   }
   .what-content h3 {
     font-size: 28px;
@@ -269,7 +277,7 @@
     padding-bottom: 50px;
   }
   .what-box-in {
-    height: 500px;
+    height: 600px;
     margin-left: -50px;
   }
   .what-content {
@@ -305,10 +313,10 @@
     justify-content: left;
   }
   .what-box:last-child {
-    height: 500px;
+    height: 600px;
   }
   .what-box {
-    width: 500px;
+    width: 600px;
     max-width: calc(100% - 50px);
     margin: auto;
   }
@@ -317,7 +325,7 @@
   }
   .what-box-in {
     margin-left: 0px;
-    height: 450px;
+    height: 600px;
   }
   .what-content h5,
   .what-content-flex {
